After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 693774 - Misc fixes/cleanups to gnome-languages.c
Misc fixes/cleanups to gnome-languages.c
Status: RESOLVED FIXED
Product: gnome-desktop
Classification: Core
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: Desktop Maintainers
Desktop Maintainers
Depends on: 693783
Blocks:
 
 
Reported: 2013-02-14 09:44 UTC by Rui Matos
Modified: 2013-02-19 11:23 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
gnome-languages: Fix a potential crash (1.52 KB, patch)
2013-02-14 09:44 UTC, Rui Matos
committed Details | Review
gnome-languages: Big renaming to make the API clearer (17.79 KB, patch)
2013-02-14 09:44 UTC, Rui Matos
committed Details | Review
gnome-languages: Add gtk-doc comments to all public functions (4.00 KB, patch)
2013-02-14 09:44 UTC, Rui Matos
committed Details | Review
gnome-languages: Create a singleton GRegex (2.34 KB, patch)
2013-02-14 09:44 UTC, Rui Matos
committed Details | Review
test-languages: Fix to actually set the locale (812 bytes, patch)
2013-02-14 09:44 UTC, Rui Matos
committed Details | Review

Description Rui Matos 2013-02-14 09:44:22 UTC
.
Comment 1 Rui Matos 2013-02-14 09:44:24 UTC
Created attachment 236016 [details] [review]
gnome-languages: Fix a potential crash

We can't continue if we aren't able to parse the string because the
return arguments will be undefined.
Comment 2 Rui Matos 2013-02-14 09:44:28 UTC
Created attachment 236017 [details] [review]
gnome-languages: Big renaming to make the API clearer

Several of these functions use the word 'name' or 'language' but the
argument they take is actually a locale string. We also rename
s/territory/country/ in the public API since country is the term that
ISO 3166 actually talks about.
Comment 3 Rui Matos 2013-02-14 09:44:30 UTC
Created attachment 236018 [details] [review]
gnome-languages: Add gtk-doc comments to all public functions
Comment 4 Rui Matos 2013-02-14 09:44:34 UTC
Created attachment 236019 [details] [review]
gnome-languages: Create a singleton GRegex

Instead of creating and destroying one each time.
Comment 5 Rui Matos 2013-02-14 09:44:36 UTC
Created attachment 236020 [details] [review]
test-languages: Fix to actually set the locale
Comment 6 Rui Matos 2013-02-19 11:23:06 UTC
Attachment 236016 [details] pushed as fa119fb - gnome-languages: Fix a potential crash
Attachment 236017 [details] pushed as 0409959 - gnome-languages: Big renaming to make the API clearer
Attachment 236018 [details] pushed as 63024cd - gnome-languages: Add gtk-doc comments to all public functions
Attachment 236019 [details] pushed as a659478 - gnome-languages: Create a singleton GRegex
Attachment 236020 [details] pushed as f54a8c2 - test-languages: Fix to actually set the locale