gnome-languages: Fix a potential crash

We can't continue if we aren't able to parse the string because the
return arguments will be undefined.

https://bugzilla.gnome.org/show_bug.cgi?id=693774